# Nokia-PK-2025

./: .gitignore
.github/workflows/: ccpp.yml  clang-analysis.yml  cppcheck.yml
src/: .clang-format  .clang-tidy
src/UE/: .gitignore  CMakeLists.txt  main.cpp
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp
src/UE/Application/Models/: Sms.cpp  Sms.hpp  SmsDatabase.cpp  SmsDatabase.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  IUserPort.hpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  ComposingSmsState.cpp  ComposingSmsState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  ViewingSmsListState.cpp  ViewingSmsListState.hpp  ViewingSmsState.cpp  ViewingSmsState.hpp
src/UE/ApplicationEnvironment/: IUeGui.hpp
src/UE/ApplicationEnvironment/UeGui/: ISmsComposeMode.hpp
src/UE/QtApplicationEnvironment/GUI/: QtSmsComposeMode.cpp  QtSmsComposeMode.hpp  QtUeGui.cpp  QtUeGui.hpp
src/UE/Tests/Application/: ApplicationTestSuite.cpp  CMakeLists.txt  SmsTestSuite.cpp
src/UE/Tests/Application/Mocks/: IBtsPortMock.hpp  IEventsHandlerMock.cpp  IEventsHandlerMock.hpp  IUeGuiMock.hpp  IUserPortMock.hpp
src/UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  UserPortTestSuite.cpp
